new index added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-	<body>
-			<img border="0" src="logo-c-log-white-web.jpg" width="300" height="300" />
-			<h2>Hello from clog</h2>
+	<body style="background-color: black">
+			<img border="0" src="logo-c-log-white-web.jpg" width="300"  />
+			<h2 style="color: white">Hello from c-log</h2>
 </div>
 	</body>
 </html>
