--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<body style="background-color: black">
-			<img border="0" src="logo-c-log-white-web.jpg" width="300"  />
+			<img border="0" src="./assets/logo-c-log-white-web.jpg" width="300"  />
 			<h2 style="color: white">Hello from c-log</h2>
 </div>
 	</body>
