--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<body style="background-color: black">
 			<img border="0" src="./assets/logo-c-log-white-web.jpg" width="300"  />
-			<h2 style="color: white">Hello from c-log</h2>
+			<h2 style="color: white">Hello from C-LOG</h2>
 </div>
 	</body>
 </html>
