--- a/request.html
+++ b/request.html
@@ -61,9 +61,7 @@
 					<div class="row">
 						<div class="col-md-2">
 							<div id="mid-logo">
-								<a href="index.html" class="logo">
-									<div class="logo"></div>
-								</a>
+								<a href="index.html" class="logo"><div class="logo"></div></a>
 							</div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
@@ -81,7 +79,7 @@
 			</div>
 		</nav>
 
-		<section id="home" class="video-hero" style="height: 100vh; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;"
+		<section id="home" class="video-hero" style="height: 700px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;"
 		    data-section="home">
 			<div class="overlay"></div>
 			<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=ePDoCPi06rk',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a>
@@ -90,9 +88,8 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>What is Maritime ID?</h2>
-								<p>A comprehensive ID solution that sums your professional experiences and qualifications,
-									<br> and lets you share this information with your employer easily, safely and for free.</p>
+								<h2>Seafarer</h2>
+								<p>We present the Maritime ID of the future</p>
 								<p>
 									<a href="request.html" class="btn btn-primary btn-lg btn-custom">Request Early Access</a>
 								</p>
@@ -103,7 +100,7 @@
 			</div>
 		</section>
 
-		<!-- <div class="mid-featured">
+		<div class="mid-featured">
 			<div class="row animate-box">
 				<div class="featured-wrap">
 					<div class="owl-carousel">
@@ -131,13 +128,13 @@
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 		<div class="mid-intro mid-bg-white">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center mid-heading animate-box">
-						<h2>What is Maritime ID?</h2>
+						<h2>What is The Maritime ID?</h2>
 						<p>A comprehensive ID solution that sums your professional experiences and qualifications, and lets you share this information
 							with your employer easily, safely and for free.</p>
 					</div>
@@ -177,7 +174,8 @@
 									<i class="icon-documentation-outlined"></i>
 								</span>
 								<div class="f-desc">
-									<p>Manage all your documentation on one platform and forget about lost or expired documents.
+									<p>Manage all your documentation on one platform and forget about lost or expired
+										documents.
 									</p>
 								</div>
 							</div>
@@ -201,70 +199,18 @@
 			</div>
 		</div>
 
-		<div class="mid-intro mid-bg-white">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center mid-heading animate-box">
-						<h2>Request Early Access</h2>
-
-						<!-- FORM START -->
-						<a class="nav-link btn btn-primary btn-outline with-arrow" id="pills-home-tab" data-toggle="pill" href="#private" role="tab"
-						    aria-controls="pills-home" aria-selected="true">Private
-							<i class="icon-arrow-right"></i>
-						</a>
-						<a class="nav-link  btn btn-primary btn-outline with-arrow" id="pills-profile-tab" data-toggle="pill" href="#business" role="tab"
-						    aria-controls="pills-profile" aria-selected="false">Business
-							<i class="icon-arrow-right"></i>
-						</a>
-						<div class="tab-content" id="pills-tabContent">
-							<div class="tab-pane fade" id="private" role="tabpanel" aria-labelledby="private-tab">
-								<form class="mid-private-form">
-									<div class="form-group">
-										<input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Your Name">
-									</div>
-									<div class="form-group">
-										<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-										<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-									</div>
-									<button type="submit" class="btn btn-primary">Submit</button>
-								</form>
-							</div>
-							<div class="tab-pane fade" id="business" role="tabpanel" aria-labelledby="business-tab">
-								<form class="mid-business-form">
-									<div class="form-group">
-										<input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Your Name">
-									</div>
-									<div class="form-group">
-										<input type="text" class="form-control" id="company" aria-describedby="company" placeholder="Company Name">
-									</div>
-									<div class="form-group">
-										<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-										<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-									</div>
-									<button type="submit" class="btn btn-primary">Submit</button>
-								</form>
-							</div>
-						</div>
-						<!-- FORM END -->
-					</div>
-				</div>
-			</div>
-		</div>
-
 		<footer id="mid-footer">
 			<div class="copy">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								<img src="images/logo-2.svg" class="footer-logo" /> This website and its contents are copyright &copy;
+								This website and its contents are copyright &copy;
 								<script>
 									document.write(new Date().getFullYear());
-								</script>
-								<a href="http://c-log.io/">C-LOG IVS</a>
-								<br> Use of this website is subject to our
-								<a href="#">Terms &amp; Conditions</a> and
-								<a href="#">Privacy Policy.</a>
+								</script> <a href="http://c-log.io/">C-LOG IVS</a>
+                                <br>
+                                Use of this website is subject to our <a href="#">Terms &amp; Conditions</a> and <a href="#">Privacy Policy.</a>
 							</p>
 						</div>
 					</div>
