--- a/contact.html
+++ b/contact.html
@@ -142,36 +142,36 @@
 							<div class="row form-group">
 								<div class="col-md-6">
 									<!-- <label for="fname">First Name</label> -->
-									<input type="text" id="fname" class="form-control" placeholder="Your firstname">
+									<input type="text" id="fname" class="form-control" placeholder="First Name">
 								</div>
 								<div class="col-md-6">
 									<!-- <label for="lname">Last Name</label> -->
-									<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+									<input type="text" id="lname" class="form-control" placeholder="Last Name">
 								</div>
 							</div>
 
 							<div class="row form-group">
 								<div class="col-md-12">
 									<!-- <label for="email">Email</label> -->
-									<input type="text" id="email" class="form-control" placeholder="Your email address">
+									<input type="text" id="email" class="form-control" placeholder="Email address">
 								</div>
 							</div>
 
 							<div class="row form-group">
 								<div class="col-md-12">
 									<!-- <label for="subject">Subject</label> -->
-									<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
+									<input type="text" id="subject" class="form-control" placeholder="Subject">
 								</div>
 							</div>
 
 							<div class="row form-group">
 								<div class="col-md-12">
 									<!-- <label for="message">Message</label> -->
-									<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+									<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Message"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-primary">
+								<input type="submit" value="Send Message" class="btn btn-primary btn-outline">
 							</div>
 						</form>
 					</div>
