--- a/html/contact.html
+++ b/html/contact.html
@@ -61,7 +61,9 @@
 					<div class="row">
 						<div class="col-md-2">
 							<div id="mid-logo">
-								<a href="index.html">Maritime ID</a>
+								<a href="index.html">
+									<img src="images/logo-2.svg" class="logo" />
+								</a>
 							</div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
@@ -112,16 +114,16 @@
 									<div class="con-info">
 										<p>
 											<span>
-												<i class="icon-location-2"></i>
-											</span> Langelinie Allé 47,
-													<br>2100 København Ø</p>
+												<i class="icon-location"></i>
+											</span>Pier47<br>Langelinie Allé 47,
+											<br>2100 København Ø</p>
 									</div>
 									<div class="con-info">
 										<p>
 											<span>
 												<i class="icon-phone3"></i>
 											</span>
-											<a href="tel://1234567920">+45 50505050</a>
+											<a href="tel://1234567920">+45 5353 9284</a>
 										</p>
 									</div>
 									<div class="con-info">
@@ -129,7 +131,7 @@
 											<span>
 												<i class="icon-paperplane"></i>
 											</span>
-											<a href="mailto:info@yoursite.com">hello@mid.com</a>
+											<a href="mailto:info@yoursite.com">mid@c-log.io</a>
 										</p>
 									</div>
 								</div>
@@ -179,22 +181,22 @@
 			</div>
 		</div>
 		<footer id="mid-footer">
-			<div class="copy">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12 text-center">
-							<p>
-								Copyright &copy;
-								<script>
-									document.write(new Date().getFullYear());
-								</script> All rights reserved
-								<br>
-							</p>
+				<div class="copy">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<p>
+									<img src="images/logo-2.svg" class="footer-logo" /> copyright &copy;
+									<script>
+										document.write(new Date().getFullYear());
+									</script>
+									<a href="http://c-log.io/">C-LOG IVS</a>
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
+			</footer>
 	</div>
 
 	<div class="gototop js-top">
