--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Maritime ID - Request Early Access</title>
+	<title>M.ID - Request Early Access</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -91,12 +91,8 @@
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
 								<img src="images/logo-2.svg" class="footer-logo" />
-								<p>One ID solution shared between all operators in the industry
-									<br>Connect easily, safely & free
-								</p>
-								<p>
-									<a href="#subscribe" class="btn btn-primary btn-lg btn-custom">Request Early Access</a>
-								</p>
+								<p>Seafarer documentation and compliance made simple</p>
+								<p><a href="#subscribe" class="btn btn-primary btn-lg btn-custom">Request Early Access</a></p>
 							</div>
 						</div>
 					</div>
@@ -138,9 +134,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center mid-heading animate-box">
-						<h2>What is Maritime ID?</h2>
-						<p>A comprehensive ID solution that sums your professional experiences and qualifications, and lets you share this information
-							with your employer easily, safely and for free.</p>
+						<h2>What is The Maritime ID?</h2>
+						<p>We provide a universal seafarer identity, documentation and compliance platform for the maritime industry</p>
 					</div>
 				</div>
 			</div>
@@ -220,6 +215,7 @@
 						<div class="tab-content" id="pills-tabContent">
 							<div class="tab-pane fade" id="private" role="tabpanel" aria-labelledby="private-tab">
 								<div id="success-msg" class="alert-success hide">Your message has been sent</div>
+								<div id="error-msg" class="alert-danger hide">Error!</div>
 								<form class="mid-subscribe-form" action="/add-subscriber">
 									<div class="form-group">
 										<input type="text" class="form-control" name="firstname" placeholder="Your First Name" required>
@@ -235,6 +231,7 @@
 								</form>
 							</div>
 							<div class="tab-pane fade" id="business" role="tabpanel" aria-labelledby="business-tab">
+								<div id="success-msg" class="alert-success hide">Your message has been sent</div>
 								<div id="error-msg" class="alert-danger hide">Error!</div>
 								<form class="mid-subscribe-form" action="/add-subscriber">
 									<div class="form-group">
@@ -271,9 +268,6 @@
 									document.write(new Date().getFullYear());
 								</script>
 								<a href="http://c-log.io/">C-LOG IVS</a>
-								<br>
-								<a href="#">Terms &amp; Conditions</a> and
-								<a href="#">Privacy Policy.</a>
 							</p>
 						</div>
 					</div>
