--- a/html/contact.html
+++ b/html/contact.html
@@ -138,40 +138,40 @@
 					</div>
 					<div class="col-md-8 col-md-pull-4 animate-box">
 						<h2>Get In Touch</h2>
-						<form action="#">
+						<form id="contact-form" action="/send-email">
 							<div class="row form-group">
 								<div class="col-md-6">
 									<!-- <label for="fname">First Name</label> -->
-									<input type="text" id="fname" class="form-control" placeholder="First Name">
+									<input type="text" name="fname" class="form-control" placeholder="First Name">
 								</div>
 								<div class="col-md-6">
 									<!-- <label for="lname">Last Name</label> -->
-									<input type="text" id="lname" class="form-control" placeholder="Last Name">
+									<input type="text" name="lname" class="form-control" placeholder="Last Name">
 								</div>
 							</div>
 
 							<div class="row form-group">
 								<div class="col-md-12">
 									<!-- <label for="email">Email</label> -->
-									<input type="text" id="email" class="form-control" placeholder="Email address">
+									<input type="text" name="email" class="form-control" placeholder="Email address">
 								</div>
 							</div>
 
 							<div class="row form-group">
 								<div class="col-md-12">
 									<!-- <label for="subject">Subject</label> -->
-									<input type="text" id="subject" class="form-control" placeholder="Subject">
+									<input type="text" name="subject" class="form-control" placeholder="Subject">
 								</div>
 							</div>
 
 							<div class="row form-group">
 								<div class="col-md-12">
 									<!-- <label for="message">Message</label> -->
-									<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Message"></textarea>
+									<textarea name="message" cols="30" rows="10" class="form-control" placeholder="Message"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-primary btn-outline">
+								<button type="submit" class="btn btn-primary btn-outline">Send Message</button>
 							</div>
 						</form>
 					</div>
@@ -227,6 +227,26 @@
 	<script src="js/google_map.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
+
+	<script>
+		// Submit form(s)
+		$("#contact-form").on("submit", function (e) {
+			e.preventDefault();
+			let form = this;
+
+			$.post(form.action, $(form).serialize(), function (response) {
+				if (response === 'OK') {
+					// Display success message
+					$('#success-msg').removeClass('hide');
+					// Reset form
+					form.reset();
+				} else {
+					// Display error message
+					$('#error-msg').removeClass('hide');
+				}
+			});
+		});
+	</script>
 
 </body>
 
