--- a/html/index.html
+++ b/html/index.html
@@ -71,9 +71,6 @@
 								<li class="active">
 									<a href="index.html">Home</a>
 								</li>
-								<li>
-									<a href="contact.html">Contact</a>
-								</li>
 							</ul>
 						</div>
 					</div>
@@ -214,8 +211,8 @@
 						</a>
 						<div class="tab-content" id="pills-tabContent">
 							<div class="tab-pane fade" id="private" role="tabpanel" aria-labelledby="private-tab">
-								<div id="success-msg" class="alert-success hide">Your message has been sent</div>
-								<div id="error-msg" class="alert-danger hide">Error!</div>
+								<div class="success-msg alert-success hide">Your message has been sent</div>
+								<div class="error-msg alert-danger hide">Error!</div>
 								<form class="mid-subscribe-form" action="/add-subscriber">
 									<div class="form-group">
 										<input type="text" class="form-control" name="firstname" placeholder="Your First Name" required>
@@ -231,8 +228,8 @@
 								</form>
 							</div>
 							<div class="tab-pane fade" id="business" role="tabpanel" aria-labelledby="business-tab">
-								<div id="success-msg" class="alert-success hide">Your message has been sent</div>
-								<div id="error-msg" class="alert-danger hide">Error!</div>
+								<div class="success-msg alert-success hide">Your message has been sent</div>
+								<div class="error-msg alert-danger hide">Error!</div>
 								<form class="mid-subscribe-form" action="/add-subscriber">
 									<div class="form-group">
 										<input type="text" class="form-control" name="firstname" placeholder="Your First Name" required>
@@ -313,12 +310,12 @@
 			$.post(form.action, $(form).serialize(), function (response) {
 				if (response === 'OK') {
 					// Display success message
-					$('#success-msg').removeClass('hide');
+					$('.success-msg').removeClass('hide');
 					// Reset form
 					form.reset();
 				} else {
 					// Display error message
-					$('#error-msg').removeClass('hide');
+					$('.error-msg').removeClass('hide');
 				}
 			});
 		});
