Small text change

--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,7 @@
 									<i class="icon-work-outlined"></i>
 								</span>
 								<div class="f-desc">
-									<p>Keep track of your work history and plan your next career move easily.
+									<p>Keep track of your work history and your records of seagoing service and plan your next career move easily.
 									</p>
 								</div>
 							</div>
