--- a/html/index.html
+++ b/html/index.html
@@ -211,7 +211,7 @@
 								<script>
 									document.write(new Date().getFullYear());
 								</script>
-								<a href="http://c-log.io/">C-LOG IVS</a>
+								<a href="http://c-log.io/">C-LOG IVSs</a>
 							</p>
 						</div>
 					</div>
